# K1DIY

./: .gitignore  K1DIY_structure.txt  README.md  README_debug.md
chrony_patch/local_patch/: install.sh
chrony_patch/remote_patch/: install.sh
scripts/: build.sh
src/vision/: CMakeLists.txt  package.xml
src/vision/config/: vision.yaml
src/vision/include/booster_vision/: vision_node.h
src/vision/include/vision/: vision_node.hpp
src/vision/launch/: launch.py
src/vision/scripts/: depth_mock.py
src/vision/src/: CMakeLists.txt  main.cpp  vision_node.cpp
src/vision/src/base/: CMakeLists.txt  data_syncer.cpp  pose.cpp
src/vision/src/model/onnx/: detection_impl.cpp
