<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision</name>
  <version>0.1.0</version>
  <description>Modular Perception Node for K1DIY using NaovaK1 architecture (DataSyncer &amp; Base Math)</description>
  <maintainer email="le-khai.pham.1@ens.etsmtl.ca">Khai Pham</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>image_transport</depend>

  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>yaml_cpp</depend>

  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>